# vaultpm

./: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  LICENSE  NEXT-STEPS.md  README.md  ROADMAP.md  SECURITY.md  claude.md  install.sh  vault.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.sh
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  fetcher.rs  lib.rs  linker.rs  lockfile.rs  package_json.rs  registry.rs  resolver.rs  script.rs  store.rs
crates/core/src/audit/: cache.rs  integrity.rs  mod.rs  osv.rs  reputation.rs  static_scan.rs  typosquat.rs
crates/core/tests/: audit_integration.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
docs/: index.html
docs/pt-br/: index.html
npm/: README.md  package.json
npm/scripts/: build-npm-packages.mjs
