[workspace]
resolver = "2"
members = ["crates/cli", "crates/core", "crates/sandbox"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Matheusagostinho/vaultpm"
homepage = "https://github.com/Matheusagostinho/vaultpm"
authors = ["Matheus Agostinho"]
description = "A secure, pnpm-style Node.js package manager written in Rust that actively blocks supply-chain attacks before install."

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
node-semver = "2"
futures = "0.3"
dirs = "5"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
console = "0.15"
bytes = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
