[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for the Vault secure package manager: resolver, fetcher, CAS store, linker and security audit."

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha1.workspace = true
hex.workspace = true
base64.workspace = true
flate2.workspace = true
tar.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
node-semver.workspace = true
futures.workspace = true
dirs.workspace = true
console.workspace = true
bytes.workspace = true
