[package]
name = "vault-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Landlock-based sandbox for running Node.js lifecycle scripts with restricted filesystem access."

[dependencies]
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc = "0.2"
